@@ -1,3 +1,11 @@
+2008-05-27  Andrés Estévez Costas  <aecostas@gmail.com>
+
+	* README:
+	* src/action.c (do_action), (voice_control_action_process_result):
+	
+	Fixes bug with mouse direction, updated README and fixes
+	action order comparision.
+
 2008-05-23  Andrés Estévez Costas  <aecostas@gmail.com>
 
 	* src/action.c (do_action): Check gconf for
